--- a/exercises/project-1/index.html
+++ b/exercises/project-1/index.html
@@ -9,7 +9,7 @@
     <div class="tfjs-example-container">
       <h1>TensorFlow.js: Using a pre-trained model</h1>
 
-      <!-- part 1 -->
+      <!-- part 1
       <section id="uploaded-image">
         <section id="input">
           <h2>Prediction using an uploaded image</h2>
@@ -25,10 +25,10 @@
 
           <div id="predictions"></div>
         </section>
-      </section>
+      </section> -->
 
       <!-- part 2 & 3 -->
-      <!-- <section id="webcam-section">
+      <section id="webcam-section">
         <section id="input">
           <h2>Prediction using an image captured from the webcam</h2>
 
@@ -41,9 +41,9 @@
         </section>
 
         <div id="predictions"></div>
-      </section> -->
+      </section>
 
-      <script type="module" src="part1.js"></script>
+      <script type="module" src="part3.js"></script>
     </div>
   </body>
 </html>
